# TFM-IoT

./: .gitignore
secure_gateway/: CMakeLists.txt  secure_gateway
secure_gateway/src/: secure_gateway.cpp
